[package]
name = "multi-threading"
version = "0.1.0"
authors = ["ShaneM123 <shanemoloneybusiness@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", features = ["blocking","json"] }
serde = { version = "1.0", features = ["derive"] }
